KubernetesMeshIstio/05-01/route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hostname-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hostname.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname
spec:
  host: hostname
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
