KubernetesMeshIstio/05-01/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - hostname
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - match:
    - headers:
        cookie:
          exact: user=test
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
    route:
    - destination:
        host: hostname
        subset: v1
  - route:
    - destination:
        host: hostname
        subset: v1
